--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -63,7 +63,7 @@ html body .flex {
   .block__fourth--xs {
     flex: 0 0 25%;
     max-width: 25%; }
-  .block__three-fourth {
+  .block__three-fourth--xs {
     flex: 0 0 75%;
     max-width: 75%; }
   .hidden-xs {
@@ -81,7 +81,7 @@ html body .flex {
   .block__fourth--sm {
     flex: 0 0 25%;
     max-width: 25%; }
-  .block__three-fourth {
+  .block__three-fourth--sm {
     flex: 0 0 75%;
     max-width: 75%; }
   .hidden-sm {
@@ -99,7 +99,7 @@ html body .flex {
   .block__fourth--md {
     flex: 0 0 25%;
     max-width: 25%; }
-  .block__three-fourth {
+  .block__three-fourth--md {
     flex: 0 0 75%;
     max-width: 75%; } }
 
@@ -113,7 +113,7 @@ html body .flex {
   .block__fourth--lg {
     flex: 0 0 25%;
     max-width: 25%; }
-  .block__three-fourth {
+  .block__three-fourth--lg {
     flex: 0 0 75%;
     max-width: 75%; } }
 
